[gd_scene load_steps=7 format=2]

[ext_resource path="res://Scripts/MainMenu.gd" type="Script" id=1]
[ext_resource path="res://Sprites/panel.jpg" type="Texture2D" id=2]
[ext_resource path="res://Sprites/logo.png" type="Texture2D" id=3]
[ext_resource path="res://Sprites/logo_banner.png" type="Texture2D" id=4]
[ext_resource path="res://shaders/disolveshader.tres" type="Material" id=5]

[sub_resource type="Animation" id=1]
resource_name = "ShowUI"
length = 3.0
tracks/0/type = "value"
tracks/0/path = NodePath("Background:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PackedFloat32Array( 0, 0.8, 1.8 ),
"transitions": PackedFloat32Array( 1, 0.435275, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("MainPage/ExitButiion:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PackedFloat32Array( 1.8, 2.4 ),
"transitions": PackedFloat32Array( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("MainPage/ExitButiion:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PackedFloat32Array( 1.9, 2.4 ),
"transitions": PackedFloat32Array( 1, 1 ),
"update": 0,
"values": [ Vector2( -20, 416 ), Vector2( 0, 416 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("MainPage/SettingsButton:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PackedFloat32Array( 1.8, 2.4 ),
"transitions": PackedFloat32Array( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("MainPage/SettingsButton:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PackedFloat32Array( 1.9, 2.4 ),
"transitions": PackedFloat32Array( 1, 1 ),
"update": 0,
"values": [ Vector2( -20, 320 ), Vector2( 0, 320 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("MainPage/StartButton:position")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PackedFloat32Array( 1.9, 2.4 ),
"transitions": PackedFloat32Array( 1, 1 ),
"update": 0,
"values": [ Vector2( -20, 234 ), Vector2( 0, 234 ) ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("MainPage/StartButton:modulate")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PackedFloat32Array( 1.8, 2.4 ),
"transitions": PackedFloat32Array( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("MainPage/logo:material:shader_param/dissolve_value")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PackedFloat32Array( 0, 2.1, 2.7 ),
"transitions": PackedFloat32Array( 1.03526, 1, 1 ),
"update": 0,
"values": [ 0.0, 0.0, 1.0 ]
}

[node name="MainMenu" type="CanvasLayer"]
layer = 128
script = ExtResource( 1 )

[node name="Background" type="TextureRect" parent="."]
visible = false
modulate = Color( 1, 1, 1, 0 )
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 2 )
expand = true
stretch_mode = 7
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MainPage" type="Control" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0

[node name="StartButton" type="Button" parent="MainPage"]
modulate = Color( 1, 1, 1, 0 )
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -126.0
offset_right = 340.0
offset_bottom = -66.0
minimum_size = Vector2( 360, 60 )
text = "Start Game"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SettingsButton" type="Button" parent="MainPage"]
modulate = Color( 1, 1, 1, 0 )
offset_left = -20.0
offset_top = 320.0
offset_right = 340.0
offset_bottom = 380.0
minimum_size = Vector2( 360, 60 )
text = "Settings"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ExitButiion" type="Button" parent="MainPage"]
modulate = Color( 1, 1, 1, 0 )
offset_left = -20.0
offset_top = 416.0
offset_right = 340.0
offset_bottom = 476.0
minimum_size = Vector2( 360, 60 )
text = "Quit"

[node name="logo" type="Sprite2D" parent="MainPage"]
material = ExtResource( 5 )
position = Vector2( 1017.89, 368.863 )
scale = Vector2( 0.858131, 0.692687 )
texture = ExtResource( 3 )

[node name="logo_banner" type="Sprite2D" parent="MainPage"]
material = ExtResource( 5 )
position = Vector2( 1011.69, 165.987 )
texture = ExtResource( 4 )

[node name="Version" type="Label" parent="MainPage"]
offset_left = 896.0
offset_top = 672.0
offset_right = 1256.0
offset_bottom = 686.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
align = 1

[node name="CharacterPage" type="Control" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0

[node name="ColorRect" type="ColorRect" parent="CharacterPage"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.0588235, 0.0588235, 0.0588235, 0.780392 )

[node name="YourName" type="Label" parent="CharacterPage"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -145.0
offset_top = -71.0
offset_right = 143.0
offset_bottom = -7.0
text = "Your Character's Name"
align = 1
valign = 1

[node name="YourGender" type="Label" parent="CharacterPage"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -260.0
offset_top = 33.0
offset_right = 28.0
offset_bottom = 97.0
pivot_offset = Vector2( 614, -204 )
text = "Select your gender"
align = 1
valign = 1

[node name="YourHouse" type="Label" parent="CharacterPage"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -2.0
offset_top = 35.0
offset_right = 286.0
offset_bottom = 99.0
pivot_offset = Vector2( 614, -204 )
text = "Select your House"
align = 1
valign = 1

[node name="Warning" type="Label" parent="CharacterPage"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -148.0
offset_top = 200.0
offset_right = 140.0
offset_bottom = 264.0
pivot_offset = Vector2( 614, -204 )
custom_colors/font_color = Color( 1, 0, 0, 1 )
align = 1
valign = 1

[node name="SelectName" type="LineEdit" parent="CharacterPage"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -138.0
offset_top = -27.0
offset_right = 150.0
offset_bottom = 13.0
text = "Enter your name here"
align = 1
caret_blink = true

[node name="SelectGender" type="OptionButton" parent="CharacterPage"]
offset_left = 453.0
offset_top = 442.0
offset_right = 593.0
offset_bottom = 474.0

[node name="SelectHouse" type="OptionButton" parent="CharacterPage"]
offset_left = 716.0
offset_top = 439.0
offset_right = 856.0
offset_bottom = 471.0

[node name="FinishCharSetup" type="Button" parent="CharacterPage"]
offset_left = 568.0
offset_top = 608.0
offset_right = 704.0
offset_bottom = 640.0
text = "Start"

[node name="Timeout" type="Timer" parent="."]
wait_time = 0.3
one_shot = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/ShowUI = SubResource( 1 )
[connection signal="pressed" from="MainPage/StartButton" to="." method="_on_StartButton_pressed"]
[connection signal="pressed" from="MainPage/ExitButiion" to="." method="_on_ExitButiion_pressed"]
[connection signal="item_selected" from="CharacterPage/SelectGender" to="." method="_on_SelectGender_item_selected"]
[connection signal="item_selected" from="CharacterPage/SelectHouse" to="." method="_on_SelectHouse_item_selected"]
[connection signal="pressed" from="CharacterPage/FinishCharSetup" to="." method="_on_FinishCharSetup_pressed"]
